[gd_scene load_steps=19 format=3 uid="uid://c8oqxmm2w2wvv"]

[ext_resource type="Script" uid="uid://dewiwais134am" path="res://game.gd" id="1_2iwba"]
[ext_resource type="Script" uid="uid://jh0v2n157q0y" path="res://world.gd" id="1_6tkge"]
[ext_resource type="Script" uid="uid://d4gnt5vtqn62" path="res://ui/chat/chat_input.gd" id="3_3e53o"]
[ext_resource type="Texture2D" uid="uid://2jputlhry6c" path="res://crosshair.png" id="3_cajfn"]
[ext_resource type="PackedScene" uid="uid://cgfpsf73dbmvb" path="res://chunk/chunk.tscn" id="3_pdr6q"]
[ext_resource type="PackedScene" uid="uid://csnpkdk57fm7x" path="res://ui/turn_timer/turn_timer.tscn" id="3_pr48h"]
[ext_resource type="Script" uid="uid://cne7h1dx1en0a" path="res://chunks.gd" id="7_eouhd"]
[ext_resource type="PackedScene" uid="uid://nmvk3bgvgsnm" path="res://day_night_cycle/day_night_cycle.tscn" id="8_80cx4"]
[ext_resource type="Script" uid="uid://bya61tl3cyfd4" path="res://startupProbe.gd" id="10_mnyh5"]
[ext_resource type="PackedScene" uid="uid://b1q2vj4f542ay" path="res://ui/inventory/inventory.tscn" id="12_pmfyc"]
[ext_resource type="PackedScene" uid="uid://np5o15k15boe" path="res://window_scene.tscn" id="13_d8uop"]
[ext_resource type="PackedScene" uid="uid://cxvp48ihr6wkw" path="res://window_bar.tscn" id="14_dqtqv"]
[ext_resource type="PackedScene" uid="uid://cyyfjbicwvflj" path="res://ui/craft/craft_ui.tscn" id="14_sxr83"]
[ext_resource type="PackedScene" uid="uid://0uges5c52oep" path="res://ui/warp_controls/warp_settings.tscn" id="15_friog"]
[ext_resource type="PackedScene" uid="uid://b4c105b3jd8a8" path="res://ui/trade/PlayerInteraction.tscn" id="15_xo6pa"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_vl0i4"]
properties/0/path = NodePath("World:age")
properties/0/spawn = true
properties/0/replication_mode = 2
properties/1/path = NodePath("World:warp_speed")
properties/1/spawn = true
properties/1/replication_mode = 2
properties/2/path = NodePath("World:turn_number")
properties/2/spawn = true
properties/2/replication_mode = 2

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_pnarc"]

[sub_resource type="PlaneMesh" id="PlaneMesh_jysef"]
size = Vector2(30, 2)

[node name="Game" type="Node" groups=["persist", "persist-client"]]
script = ExtResource("1_2iwba")

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="ChatInput" type="TextEdit" parent="UI/HUD"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -207.0
offset_top = -110.0
offset_right = 219.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("3_3e53o")

[node name="TurnTimer" parent="UI/HUD" node_paths=PackedStringArray("world") instance=ExtResource("3_pr48h")]
unique_name_in_owner = true
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_right = 0.0
offset_left = 553.0
offset_top = 25.0
offset_right = 754.0
offset_bottom = 57.0
grow_horizontal = 1
world = NodePath("../../../World")

[node name="CrossHair" type="TextureRect" parent="UI"]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_cajfn")

[node name="CameraPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 200, 0)
visible = false

[node name="ServerCamera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
visible = false
current = true

[node name="World" type="Node3D" parent="." groups=["persist"]]
unique_name_in_owner = true
script = ExtResource("1_6tkge")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="World"]
root_path = NodePath("../..")
replication_config = SubResource("SceneReplicationConfig_vl0i4")

[node name="FloorStaticBody" type="StaticBody3D" parent="World"]
collision_mask = 0

[node name="FloorCollisionShape3D" type="CollisionShape3D" parent="World/FloorStaticBody"]
shape = SubResource("WorldBoundaryShape3D_pnarc")

[node name="Chunks" type="Node3D" parent="World"]
unique_name_in_owner = true
script = ExtResource("7_eouhd")

[node name="ChunkSpawner" type="MultiplayerSpawner" parent="World/Chunks"]
_spawnable_scenes = PackedStringArray("uid://cgfpsf73dbmvb")
spawn_path = NodePath("..")

[node name="[0,0,0]" parent="World/Chunks" instance=ExtResource("3_pdr6q")]
unique_name_in_owner = true

[node name="Players" type="Node3D" parent="World"]
unique_name_in_owner = true

[node name="PlayerSpawner" type="MultiplayerSpawner" parent="World/Players"]
_spawnable_scenes = PackedStringArray("uid://xcjrjq5cbn7y")
spawn_path = NodePath("..")

[node name="30ftRuler" type="MeshInstance3D" parent="World"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0)
visible = false
mesh = SubResource("PlaneMesh_jysef")
skeleton = NodePath("../..")

[node name="DayNightCycle" parent="World" node_paths=PackedStringArray("world") instance=ExtResource("8_80cx4")]
unique_name_in_owner = true
world = NodePath("..")

[node name="startupProbe" type="Node" parent="."]
script = ExtResource("10_mnyh5")

[node name="InventoryUIWindow" parent="." groups=["persist-client"] instance=ExtResource("13_d8uop")]
unique_name_in_owner = true
title = "Inventory"
position = Vector2i(520, 100)
size = Vector2i(400, 400)
visible = false

[node name="InventoryUI" parent="InventoryUIWindow" instance=ExtResource("12_pmfyc")]
unique_name_in_owner = true

[node name="CraftUIWindow" parent="." groups=["persist-client"] instance=ExtResource("13_d8uop")]
unique_name_in_owner = true
auto_translate_mode = 1
transparent_bg = true
title = "Crafting"
position = Vector2i(100, 100)
size = Vector2i(400, 400)
visible = false
transient = true
transparent = true
mouse_passthrough = true

[node name="CraftUI" parent="CraftUIWindow" instance=ExtResource("14_sxr83")]
unique_name_in_owner = true

[node name="PlayerInteractionWindow" parent="." groups=["persist-client"] instance=ExtResource("13_d8uop")]
unique_name_in_owner = true
title = "Trade/Quest"
position = Vector2i(100, 100)
size = Vector2i(800, 400)
visible = false

[node name="PlayerInteractionUI" parent="PlayerInteractionWindow" instance=ExtResource("15_xo6pa")]
unique_name_in_owner = true

[node name="WindowListWindow" parent="." instance=ExtResource("13_d8uop")]
position = Vector2i(400, 40)
size = Vector2i(304, 128)
visible = false

[node name="WindowBar" parent="WindowListWindow" node_paths=PackedStringArray("game") instance=ExtResource("14_dqtqv")]
anchors_preset = 15
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0
grow_vertical = 2
game = NodePath("../..")

[node name="WarpSettings" parent="." node_paths=PackedStringArray("game", "world") instance=ExtResource("15_friog")]
unique_name_in_owner = true
offset_left = 176.0
offset_top = 21.0
offset_right = 430.0
offset_bottom = 154.0
game = NodePath("..")
world = NodePath("../World")

[connection signal="visibility_changed" from="InventoryUIWindow" to="InventoryUIWindow" method="_on_visibility_changed"]
[connection signal="visibility_changed" from="CraftUIWindow" to="CraftUIWindow" method="_on_visibility_changed"]
[connection signal="visibility_changed" from="PlayerInteractionWindow" to="PlayerInteractionWindow" method="_on_visibility_changed"]
